<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.franciscojavier.ejercicioencasacontroles.MainActivity">



    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/txt_masa"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/d25"
                    android:text="@string/txtmasa"
                    />

                <Spinner
                    android:id="@+id/spinner"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <Button
                    android:id="@+id/btn_masa"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:onClick="clickmasa"
                    android:text="@string/elegir" />

                <TextView
                    android:id="@+id/txt_masa_inferior"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/d20"
                    android:text="@string/tipo_masa" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/txt_ingredientes"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/d25"
                    android:text="@string/txtingredientes" />

                <CheckBox
                    android:id="@+id/cb_ternera"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/cb_ternera" />

                <CheckBox
                    android:id="@+id/cb_pollo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/cb_pollo" />

                <CheckBox
                    android:id="@+id/cb_bacon"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/cb_bacon" />

                <CheckBox
                    android:id="@+id/cb_cebolla"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/cb_cebolla" />

                <CheckBox
                    android:id="@+id/cb_champiñones"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/cb_champiñones" />

                <CheckBox
                    android:id="@+id/cb_peperoni"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/cb_peperoni" />

                <Button
                    android:id="@+id/btn_ingredientes"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:enabled="false"
                    android:onClick="clickingredientes"
                    android:text="@string/elegir" />

                <TextView
                    android:id="@+id/txt_ingredientes_inferior"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/d20"
                    android:text="@string/tipo_ingredientes" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/txt_tamano"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/d25"
                    android:text="@string/txttamaño" />

                <RadioGroup
                    android:id="@+id/rgroup_tamano"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <RadioButton
                        android:id="@+id/radiobt_pequeña"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/pequeña" />

                    <RadioButton
                        android:id="@+id/radiobt_mediana"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/mediana" />

                    <RadioButton
                        android:id="@+id/radiobtn_grande"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/grande" />
                </RadioGroup>

                <Button
                    android:id="@+id/btn_tamano"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:enabled="false"
                    android:onClick="clicktamano"
                    android:text="@string/elegir" />

                <TextView
                    android:id="@+id/txt_tamano_inferior"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/d20"
                    android:text="@string/tipo_tamaño" />

            </LinearLayout>
        </LinearLayout>

    </ScrollView>
</LinearLayout>








